# luadoom

./: CMakeLists.txt
lua/: CMakeLists.txt  luaconf.h
opl/: CMakeLists.txt
pcsound/: CMakeLists.txt
src/: CMakeLists.txt  l_main.c  l_main.h  l_video.c  l_video.h  l_wad.c  l_wad.h  sc_man.c  sc_man.h
src/doom/: d_main.c  g_game.c  p_tick.c
src/doom_lua/: hud.lua  strings.lua
src/setup/: CMakeLists.txt
textscreen/: CMakeLists.txt
